# peer-observer-agents

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml  claude.yml
docs/: deployment.md  profiles.md  releasing.md  telemetry.md  testing.md
scripts/: release.sh
src/: annotation.rs  config.rs  context.rs  cooldown.rs  correlation.rs  grafana.rs  home.html  investigation.rs  main.rs  processor.rs  prompt.rs  rpc.rs  sanitization.rs  server.rs  state.rs  types.rs  viewer.html  viewer.rs
src/alerts/: mod.rs  spec.rs
src/debug_logs/: filter.rs  mod.rs
src/investigation/: collector.rs  mod.rs  runner.rs
src/parca/: filter.rs  mod.rs
src/profiles/: api.rs  db.rs  identity.rs  mod.rs  models.rs  poller.rs  viewer.html
src/prompt/: alert_context.rs  fast_path.rs  instructions.rs  mod.rs  sanitization.rs
src/prompt/instructions/: chain.rs  connections.rs  infra.rs  mempool.rs  meta.rs  mod.rs  p2p_messages.rs  performance.rs  security.rs
src/rpc/: filter.rs  mod.rs
src/viewer/: api.rs  cursor.rs  html.rs  log_file.rs  log_schema.rs  mod.rs
